full website, working on search

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -87,11 +87,11 @@
                         <a class="nav-link" href="index.html#contact">Contact Me</a>
                     </li>
                 </ul>
-                <form class="d-flex" action="/christopher.github.io/templates/results.html" method="GET" id="searchForm">
+                <!--form class="d-flex" action="/christopher.github.io/templates/results.html" method="GET" id="searchForm">
                     <label for="SearchInput"></label>
                     <input id = "SearchInput" class="form-control me-2" type="search" name="query" placeholder="Search Tags" aria-label="Search">
                     <button class="btn btn-outline-info" type="submit">Search</button>                 
-                </form>
+                </form-->
                 <div id="searchResults"></div>
 
                 <script src="static/js/search.js"></script>
@@ -571,6 +571,84 @@
     
     <section class="pad" id="backend">
         <h3> Backend Projects </h3>
+        
+            <div class="project" id="Christopher's Portfolio Website">
+                <h4>Christopher's Portfolio Website</h4>
+                <hr class="bar">
+                <h5 class="completion">Completion: August 2024</h5>
+                <div class="row">
+                    <div class="col-6 thumbnail-container">
+                        <img src="/christopher.github.io/static/images/swe/website.png" alt="Christopher's Portfolio Website diagram" class="thumbnail">
+                    </div>
+                    <p class="col-6 sum">Successfully deployed Full Stack web application that acts as a clear representation of my experiences, projects, and credentials.</p>
+                </div>
+                <h6 class="tag-text">Tags: 
+                    
+                    <span class="tag" style="background-color: #DC143C;">
+                        Frontend
+                    </span>
+                    
+                    <span class="tag" style="background-color: #0769AD;">
+                        jQuery
+                    </span>
+                    
+                    <span class="tag" style="background-color: #BEE7FE;">
+                        Jinja
+                    </span>
+                    
+                    <span class="tag" style="background-color: #E34F26;">
+                        HTML
+                    </span>
+                    
+                    <span class="tag" style="background-color: #2DA2D5;">
+                        CSS
+                    </span>
+                    
+                    <span class="tag" style="background-color: #F7D35B;">
+                        JavaScript
+                    </span>
+                    
+                    <span class="tag" style="background-color: #BEE7FE;">
+                        Twitter-bootstrap
+                    </span>
+                    
+                    <span class="tag" style="background-color: #306998;">
+                        Python
+                    </span>
+                    
+                    <span class="tag" style="background-color: #BEE7FE;">
+                        UI-Design
+                    </span>
+                    
+                    <span class="tag" style="background-color: #5A6978;">
+                        Full Stack
+                    </span>
+                    
+                    <span class="tag" style="background-color: #66DAD7;">
+                        Cloud
+                    </span>
+                    
+                    <span class="tag" style="background-color: #FF9900;">
+                        AWS
+                    </span>
+                    
+                    <span class="tag" style="background-color: #569A31;">
+                        S3
+                    </span>
+                    
+                </h6>
+                <div class="project-row">
+                    <span class="project-git">
+                        <a href="https://github.com/cjd2186/christopher.github.io" class="fab fa-github" target="_blank" aria-label="link to github page"></a>
+                    </span>
+                    <span class="project-git">
+                        <a href= class='project-git fa-solid fa-file-pdf fa-2xl' target='_blank' aria-label='link to project report'></a>
+                    </span>
+                    <a href="/christopher.github.io/templates/pages/portfolio.html" class="read-more-button">
+                        <button type="button" class="btn btn-outline-info">Read More</button>
+                    </a>
+                </div>
+            </div>
         
             <div class="project" id="NFL Cloud Native Application">
                 <h4>NFL Cloud Native Application</h4>
