--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -110,49 +110,65 @@
 </head>
 <body>
     <div class="summary">
-        <h1>P4 IoT Firewall</h1>
-        <h3>Completion: August 2023</h3>
-        <p>In this repository, I built upon the exisiting codebase of the lab's P4 Firewall project. My contributions lie in the following files:<br><br>*controller.py <br>*basic.p4 <br><br> Where I created a blacklist routine for the firewall. This routine would block ip addresses when the traffic received from these IoT devices contained abnormally large packet sizes, or if the rate at which these packets were received were abnormal as well. Both of these rules monitor live traffic sent to and received at the firewall.</p>
+        <h1>Christopher's Portfolio Website</h1>
+        <h3>Completion: August 2024</h3>
+        <p>Using my UI knowledge I was able to learn how to use Jinja templates and how to deploy a website to an AWS S3 bucket. <br> This website features numerous templates, detailed descriptions of my projects, and a design that integrates my favorite features of LinkedIn and Github. <br> This website is unique in that it is easy to add to, as all the data and web templates were designed to be easily iterated and exapnded upon.</p>
         <p>Tags: 
             
-            <span class="tag" style="background-color: #9370DB;">
-                Research
+            <span class="tag" style="background-color: #DC143C;">
+                Frontend
             </span>
             
-            <span class="tag" style="background-color: #000000;">
-                P4
+            <span class="tag" style="background-color: #0769AD;">
+                jQuery
+            </span>
+            
+            <span class="tag" style="background-color: #BEE7FE;">
+                Jinja
+            </span>
+            
+            <span class="tag" style="background-color: #E34F26;">
+                HTML
+            </span>
+            
+            <span class="tag" style="background-color: #2DA2D5;">
+                CSS
+            </span>
+            
+            <span class="tag" style="background-color: #F7D35B;">
+                JavaScript
+            </span>
+            
+            <span class="tag" style="background-color: #BEE7FE;">
+                Twitter-bootstrap
             </span>
             
             <span class="tag" style="background-color: #306998;">
                 Python
             </span>
             
-            <span class="tag" style="background-color: #222222;">
-                Networks
-            </span>
-            
             <span class="tag" style="background-color: #BEE7FE;">
-                Intelligence
+                UI-Design
             </span>
             
-            <span class="tag" style="background-color: #B22222;">
-                Firewall
+            <span class="tag" style="background-color: #5A6978;">
+                Full Stack
             </span>
             
-            <span class="tag" style="background-color: #339933;">
-                Wireshark
+            <span class="tag" style="background-color: #66DAD7;">
+                Cloud
             </span>
             
-            <span class="tag" style="background-color: #BEE7FE;">
-                IoT
+            <span class="tag" style="background-color: #FF9900;">
+                AWS
             </span>
             
-            <span class="tag" style="background-color: #C4D8E2;">
-                Columbia
+            <span class="tag" style="background-color: #569A31;">
+                S3
             </span>
             
         </p>
-        <a href="index.html#P4 IoT Firewall">
+        <a href="index.html#Christopher's Portfolio Website">
             <button type="button" class="btn btn-outline-info">Back to Home</button>
         </a>
     </div>
